--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -13,6 +13,8 @@
 @import 'partials/customer-stories';
 @import 'partials/docker-deploy';
 @import 'partials/vectors';
+@import 'partials/integrations';
+@import 'partials/get-started';
 
 .main-header {
   background: $neutral-10;
