--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
@@ -20,7 +20,7 @@
     margin: 0;
   }
 
-  &__description {
+  &__subtitle {
     font-size: map-get($font-sizes-text, 'xl');
     line-height: rem(30);
     margin-top: $spacer * 1.5;
