--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -1,6 +1,6 @@
 <section class="core-features">
   <h2 class="core-features__title">{{ .Params.title }}</h2>
-  <p class="core-features__description">{{ .Params.description }}</p>
+  <p class="core-features__subtitle">{{ .Params.description }}</p>
   {{ partial "link" . }}
   <div class="core-features__cards">
     {{ range .Params.featureCards }}
