--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -1,7 +1,7 @@
 <section class="docker-deploy">
   <div class="docker-deploy__left">
     <h3 class="docker-deploy__title">{{ .Params.title }}</h3>
-    <p class="docker-deploy__description">
+    <p class="docker-deploy__subtitle">
       Get started with our
       <a class="docker-deploy__link" href="{{ .Params.quickStartLink.url }}">{{ .Params.quickStartLink.text }}</a>, or
       our main GitHub repository
