--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
@@ -21,7 +21,7 @@
     max-width: rem(920);
   }
 
-  &__description {
+  &__subtitle {
     font-size: map-get($font-sizes-text, 'xl');
     line-height: rem(30);
     margin-bottom: $spacer * 1.5;
