--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
@@ -8,8 +8,6 @@
   gap: $spacer * 3;
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
-  padding-right: $spacer * 1.5;
-  padding-left: $spacer * 1.5;
 
   &__title {
     color: $neutral-70;
@@ -27,9 +25,7 @@
 
   &__logos-wrapper {
     overflow-x: scroll;
-    max-width: calc(100% - $spacer * 9 * 2);
-    margin-right: $spacer * 9;
-    margin-left: $spacer * 9;
+    max-width: 100%;
     position: relative;
   }
 
