add footer component

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -15,6 +15,7 @@
 @import 'partials/vectors';
 @import 'partials/integrations';
 @import 'partials/get-started';
+@import 'partials/footer';
 
 .main-header {
   background: $neutral-10;
