--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -14,8 +14,9 @@
     "customer-stories") }} {{ partial "customer-stories" . }} {{ end }} {{ with (.Site.GetPage "integrations") }} {{
     partial "integrations" . }} {{ end }} {{ with (.Site.GetPage "docker-deploy") }} {{ partial "docker-deploy" . }} {{
     end }} {{ with (.Site.GetPage "vectors") }} {{ partial "vectors" . }} {{ end }} {{ with (.Site.GetPage
-    "get-started") }} {{ partial "get-started" . }} {{ end }} {{ $pageSearchScrollJs := resources.Get
-    "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+    "get-started") }} {{ partial "get-started" . }} {{ end }} {{ with (.Site.GetPage "footer") }} {{ partial "footer" .
+    }} {{ end }} {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify |
+    resources.Fingerprint "sha512" }}
     <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
   </body>
 </html>
