--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
@@ -1,7 +1,9 @@
-<div class="get-started">
+<section class="get-started">
   <div class="get-started__content">
     <h3 class="get-started__title">{{ .Params.title }}</h3>
     <p class="get-started__subtitle">{{ .Params.subtitle }}</p>
     <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
+    <img class="get-started__planet-icon" src="/img/planet.svg" />
+    <img class="get-started__duo-planet-icon" src="/img/duo-planet.svg" />
   </div>
-</div>
+</section>
