add use cases page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -16,6 +16,7 @@
 @import 'partials/integrations';
 @import 'partials/get-started';
 @import 'partials/footer';
+@import 'partials/additional-resources';
 
 .main-header {
   background: $neutral-10;
