--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -9,6 +9,8 @@
     </p>
   </div>
   <div class="docker-deploy__right">
-    <img src="/img/docker-illustration.svg" alt="{{ .Params.title }}" />
+    <div class="docker-deploy__preview" style="background-image: url(/img/docker-illustration.png)">
+      <code>{{ .Params.command | safeHTML }}</code>
+    </div>
   </div>
 </section>
