--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
@@ -6,5 +6,5 @@
     <a class="integrations__link" href="{{ .Params.frameworkLink.url }}">{{ .Params.frameworkLink.text }}</a>.
   </p>
   {{ partial "link" . }}
-  <img class="integrations__preview" src="/img/integrations.svg" alt="{{ .Params.title }}" />
+  <div class="integrations__preview" />
 </section>
