--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
@@ -13,7 +13,7 @@
           <span>{{ partial "svg" "Arrow-Right-Sm.svg" }}</span>
         </a>
       </div>
-      <img src="/img/vectors/vector-{{ $index }}.svg" alt="{{ .title }}" />
+      <div class="vectors__card-image" style="background-image: url(/img/vectors/vector-{{$index}}.svg)"></div>
     </div>
     {{ end }}
   </div>
