--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
@@ -34,19 +34,24 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: $spacer * 3;
-    margin-top: $spacer * 5;
+    gap: rem(30);
+    margin-top: rem(30);
   }
 
   &__card {
     background-color: $neutral-98;
-    padding-top: $spacer * 3;
-    padding-bottom: $spacer * 1.8;
-    padding-left: $spacer * 3;
-    padding-right: $spacer * 3;
-    max-width: rem(480);
+    padding-top: $spacer * 2.5;
+    padding-bottom: $spacer * 2.5;
+    padding-left: $spacer * 2.5;
+    padding-right: $spacer * 2.5;
+    max-width: rem(350);
+    min-height: rem(390);
     border-radius: calc($spacer / 2);
     border: 1px solid $neutral-90;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     svg {
       max-width: rem(48);
@@ -59,6 +64,52 @@
     margin-top: $spacer * 1.5;
     margin-bottom: $spacer;
     line-height: rem(34);
+  }
+
+  &__cloud-native {
+    background-color: $neutral-98;
+    padding-top: rem(75);
+    padding-bottom: rem(75);
+    padding-left: $spacer * 3;
+    padding-right: $spacer * 3;
+    width: 100%;
+    max-width: rem(1110);
+    min-height: rem(420);
+    border-radius: calc($spacer / 2);
+    border: 1px solid $neutral-90;
+    margin-top: $spacer * 5;
+    position: relative;
+
+    display: flex;
+    justify-content: space-between;
+
+    > div {
+      max-width: rem(400);
+    }
+
+    .core-features__card-title {
+      font-size: map-get($font-sizes-text, 'xxl');
+      line-height: rem(48);
+      margin-top: 0;
+      margin-bottom: $spacer * 1.5;
+    }
+
+    .core-features__card-content {
+      font-size: map-get($font-sizes-text, 'l');
+      line-height: rem(27);
+    }
+  }
+
+  &__cloud-native-image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-size: contain;
+    background-image: url('/img/qdrant-cloud.png');
+    max-width: 100% !important;
+    width: rem(540);
+    height: rem(372);
+    border-radius: 0 0 calc($spacer / 2) 0;
   }
 
   &__card-content {
