--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -3,21 +3,23 @@
     <h3 class="customer-stories__title">{{ .Params.title }}</h3>
     {{ partial "link" . }}
   </div>
-  <div class="customer-stories__cards">
-    {{ range .Params.storyCards }}
-    <div class="customer-stories__card">
-      <div>
-        {{ .icon | safeHTML }}
-        <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
-      </div>
-      <div class="customer-stories__card-footer">
-        {{ .author.avatar | safeHTML }}
-        <div class="customer-stories__card-author">
-          <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
-          <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+  <div class="customer-stories__cards-wrapper">
+    <div class="customer-stories__cards">
+      {{ range .Params.storyCards }}
+      <div class="customer-stories__card">
+        <div>
+          <img src="{{.icon}}" alt="{{.brand}}" />
+          <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
+        </div>
+        <div class="customer-stories__card-footer">
+          <img src="{{.author.avatar}}" alt="{{.author.fullName}}" />
+          <div class="customer-stories__card-author">
+            <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
+            <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+          </div>
         </div>
       </div>
+      {{ end }}
     </div>
-    {{ end }}
   </div>
 </section>
