--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -1,7 +1,17 @@
 <section class="customer-stories">
   <div class="customer-stories__header">
     <h3 class="customer-stories__title">{{ .Params.title }}</h3>
-    {{ partial "link" . }}
+    <div class="customer-stories__header-content">
+      {{ partial "link" . }}
+      <div class="customer-stories__controls">
+        <button type="button" disabled class="customer-stories__button customer-stories__button-prev">
+          <span>{{ partial "svg" "Angle-Right.svg" }}</span>
+        </button>
+        <button type="button" class="customer-stories__button">
+          <span>{{ partial "svg" "Angle-Right.svg" }}</span>
+        </button>
+      </div>
+    </div>
   </div>
   <div class="customer-stories__cards-wrapper">
     <div class="customer-stories__cards">
