use mobile first approach

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
@@ -29,6 +29,10 @@
     position: relative;
   }
 
+  &__logos-wrapper::-webkit-scrollbar {
+    display: none;
+  }
+
   &__logos-content {
     display: flex;
     gap: $spacer * 6.5;
