--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
@@ -1,5 +1,9 @@
 {{ $opts := dict "transpiler" "dartsass" "enableSourceMap" (not hugo.IsProduction) }}
 <head>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui"
+  />
   <meta charset="UTF-8" />
   <title>Title</title>
 
