--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
@@ -3,8 +3,8 @@
 .core-features {
   background-color: $neutral-94;
 
-  padding-top: $spacer * 6.5;
-  padding-bottom: $spacer * 6.5;
+  padding-top: $spacer * 4;
+  padding-bottom: $spacer * 4;
   padding-left: $spacer * 1.5;
   padding-right: $spacer * 1.5;
 
@@ -14,18 +14,18 @@
   justify-content: center;
 
   &__title {
-    font-size: map-get($font-sizes, 2);
-    line-height: rem(67);
+    font-size: rem(40);
+    line-height: rem(48);
     text-align: center;
     margin-bottom: $spacer * 1.5;
-    max-width: rem(920);
+    max-width: 100%;
   }
 
   &__subtitle {
-    font-size: map-get($font-sizes-text, 'xl');
-    line-height: rem(30);
+    font-size: map-get($font-sizes-text, 'l');
+    line-height: rem(27);
     margin-bottom: $spacer * 1.5;
-    max-width: rem(920);
+    max-width: 100%;
     text-align: center;
   }
 
@@ -40,14 +40,15 @@
 
   &__card {
     background-color: $neutral-98;
-    padding-top: $spacer * 2.5;
-    padding-bottom: $spacer * 2.5;
-    padding-left: $spacer * 2.5;
-    padding-right: $spacer * 2.5;
-    max-width: rem(350);
-    min-height: rem(390);
+    padding-top: $spacer * 1.5;
+    padding-bottom: $spacer * 1.5;
+    padding-left: $spacer * 1.5;
+    padding-right: $spacer * 1.5;
+    max-width: 100%;
+    min-height: 100%;
     border-radius: calc($spacer / 2);
     border: 1px solid $neutral-90;
+    width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -68,16 +69,16 @@
 
   &__cloud-native {
     background-color: $neutral-98;
-    padding-top: rem(75);
-    padding-bottom: rem(75);
-    padding-left: $spacer * 3;
-    padding-right: $spacer * 3;
+    padding-top: $spacer * 2.5;
+    padding-bottom: $spacer * 2.5;
+    padding-left: $spacer * 1.5;
+    padding-right: $spacer * 1.5;
     width: 100%;
-    max-width: rem(1110);
-    min-height: rem(420);
+    max-width: 100%;
+    min-height: rem(475);
     border-radius: calc($spacer / 2);
     border: 1px solid $neutral-90;
-    margin-top: $spacer * 5;
+    margin-top: rem(40);
     position: relative;
 
     display: flex;
@@ -88,15 +89,16 @@
     }
 
     .core-features__card-title {
-      font-size: map-get($font-sizes-text, 'xxl');
-      line-height: rem(48);
+      font-size: rem(24);
+      line-height: rem(34);
       margin-top: 0;
-      margin-bottom: $spacer * 1.5;
+      margin-bottom: rem(12);
     }
 
     .core-features__card-content {
       font-size: map-get($font-sizes-text, 'l');
       line-height: rem(27);
+      margin-bottom: rem(12);
     }
   }
 
@@ -107,8 +109,8 @@
     background-size: contain;
     background-image: url('/img/qdrant-cloud.png');
     max-width: 100% !important;
-    width: rem(540);
-    height: rem(372);
+    width: rem(310);
+    height: rem(214);
     border-radius: 0 0 calc($spacer / 2) 0;
   }
 
@@ -121,5 +123,63 @@
     color: $neutral-20;
     font-size: map-get($font-sizes-text, 'm');
     text-decoration: none;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    padding-top: $spacer * 6.5;
+    padding-bottom: $spacer * 6.5;
+
+    &__title {
+      font-size: map-get($font-sizes, 2);
+      line-height: rem(67);
+      max-width: rem(920);
+    }
+
+    &__subtitle {
+      font-size: map-get($font-sizes-text, 'xl');
+      line-height: rem(30);
+      max-width: rem(920);
+    }
+
+    &__card {
+      padding-top: $spacer * 2.5;
+      padding-bottom: $spacer * 2.5;
+      padding-left: $spacer * 2.5;
+      padding-right: $spacer * 2.5;
+      max-width: rem(350);
+      min-height: rem(390);
+
+      svg {
+        max-width: rem(48);
+        max-height: rem(48);
+      }
+    }
+
+    &__cloud-native {
+      padding-top: rem(75);
+      padding-bottom: rem(75);
+      max-width: rem(1110);
+      min-height: rem(420);
+      padding-left: $spacer * 3;
+      padding-right: $spacer * 3;
+      margin-top: $spacer * 5;
+
+      .core-features__card-title {
+        font-size: map-get($font-sizes-text, 'xxl');
+        line-height: rem(48);
+        margin-bottom: $spacer * 1.5;
+      }
+
+      .core-features__card-content {
+        font-size: map-get($font-sizes-text, 'l');
+        line-height: rem(27);
+        margin-bottom: $spacer * 1.5;
+      }
+    }
+
+    &__cloud-native-image {
+      width: rem(540);
+      height: rem(372);
+    }
   }
 }
