--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
@@ -3,10 +3,10 @@
 .customer-stories {
   background-color: $neutral-94;
 
-  padding-top: $spacer * 2.5;
+  padding-top: $spacer * 4;
   padding-left: $spacer * 1.5;
   padding-right: $spacer * 1.5;
-  padding-bottom: $spacer * 8;
+  padding-bottom: $spacer * 4;
 
   display: flex;
   flex-direction: column;
@@ -23,11 +23,12 @@
   &__header-content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    margin-top: $spacer;
   }
 
   &__controls {
-    display: flex;
+    display: none;
     gap: $spacer * 2.5;
   }
 
@@ -58,15 +59,11 @@
   }
 
   &__title {
-    font-size: map-get($font-sizes, 3);
-    line-height: rem(57);
+    font-size: rem(32);
+    line-height: rem(38);
     color: $neutral-20;
+    text-align: center;
     margin: 0;
-  }
-
-  &__cards-wrapper {
-    overflow-y: scroll;
-    max-width: rem(1110);
   }
 
   &__cards-wrapper::-webkit-scrollbar {
@@ -75,6 +72,7 @@
 
   &__cards {
     display: flex;
+    flex-direction: column;
     gap: $spacer * 2;
   }
 
@@ -86,7 +84,7 @@
     padding-right: $spacer * 2;
 
     min-width: rem(350);
-    max-width: rem(350);
+    max-width: 100%;
     min-height: rem(407);
 
     border-radius: calc($spacer / 2);
@@ -129,5 +127,38 @@
 
   &__card:last-of-type img {
     min-width: rem(80);
+  }
+
+  @media only screen and (min-width: 1024px) {
+    padding-top: $spacer * 2.5;
+    padding-bottom: $spacer * 8;
+
+    &__title {
+      font-size: map-get($font-sizes, 3);
+      line-height: rem(57);
+      text-align: left;
+    }
+
+    &__controls {
+      display: flex;
+    }
+
+    &__header-content {
+      justify-content: space-between;
+      margin-top: 0;
+    }
+
+    &__cards-wrapper {
+      overflow-y: scroll;
+      max-width: rem(1110);
+    }
+
+    &__cards {
+      flex-direction: row;
+    }
+
+    &__card {
+      max-width: rem(350);
+    }
   }
 }
