--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   padding-top: $spacer * 4;
-  padding-bottom: $spacer * 3;
+  padding-bottom: $spacer * 2.5;
   background-color: $neutral-10;
 
   display: flex;
@@ -21,8 +21,11 @@
   &__top-content {
     display: flex;
     width: 100%;
+    padding: 0 rem(20);
+    flex-direction: column;
     justify-content: space-between;
-    max-width: rem(1100);
+    gap: $spacer * 3;
+    max-width: 100%;
   }
 
   &__logo {
@@ -56,13 +59,14 @@
   &__menu {
     display: flex;
     justify-content: space-between;
-    min-width: rem(540);
-    gap: rem(54);
+    flex-wrap: wrap;
+    gap: $spacer * 3;
   }
 
   &__menu-section {
     display: flex;
     flex-direction: column;
+    min-width: rem(144);
   }
 
   &__menu-section-title {
@@ -105,19 +109,22 @@
   &__middle-content {
     width: 100%;
     display: flex;
-    align-items: center;
-    max-width: rem(1100);
+    align-items: flex-start;
+    flex-direction: column;
+    max-width: 100%;
     justify-content: space-between;
+    padding: 0 rem(20);
   }
 
   &__middle-newsletter {
-    max-width: rem(350);
+    max-width: 100%;
     display: flex;
     flex-direction: column;
   }
 
   &__middle-subscribe {
     display: flex;
+    width: 100%;
     gap: calc($spacer / 2);
   }
 
@@ -130,7 +137,7 @@
     padding-right: $spacer;
     border-radius: 8px;
     max-height: rem(40);
-    min-width: rem(414);
+    width: 100%;
     outline: none;
     color: $neutral-98;
   }
@@ -166,7 +173,7 @@
   &__bottom {
     width: 100%;
     padding-top: rem(30);
-    padding-bottom: rem(30);
+    padding-bottom: 0;
 
     display: flex;
     align-items: center;
@@ -177,7 +184,9 @@
     width: 100%;
     display: flex;
     align-items: center;
-    max-width: rem(1100);
+    flex-direction: column;
+    max-width: 100%;
+    gap: $spacer * 1.5;
     justify-content: space-between;
   }
 
@@ -196,5 +205,55 @@
   &__bottom-links {
     display: flex;
     gap: $spacer * 3;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    padding-bottom: $spacer * 3;
+
+    &__menu {
+      min-width: rem(540);
+      gap: rem(54);
+    }
+
+    &__menu-section {
+      min-width: unset;
+    }
+
+    &__top-content {
+      padding: 0;
+      flex-direction: row;
+      max-width: rem(1100);
+      gap: 0;
+    }
+
+    &__middle-content {
+      padding: 0;
+      flex-direction: row;
+      align-items: center;
+      max-width: rem(1100);
+    }
+
+    &__middle-newsletter {
+      max-width: rem(350);
+    }
+
+    &__middle-subscribe {
+      justify-content: flex-end;
+    }
+
+    &__middle-subscribe input {
+      min-width: rem(414);
+      width: auto;
+    }
+
+    &__bottom {
+      padding-bottom: rem(30);
+    }
+
+    &__bottom-content {
+      gap: 0;
+      flex-direction: row;
+      max-width: rem(1100);
+    }
   }
 }
