--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
@@ -4,7 +4,7 @@
     <div class="customers__logos-content">{{ range .Params.customers }} {{ .logo | safeHTML }} {{ end }}</div>
     <div class="customers__logos-overlay"></div>
   </div>
-  <div>
+  <div class="customers__description">
     <span class="customers__title">{{ .Params.customerStories.text }}</span>
     <a class="customers__link" href="{{ .Params.customerStories.url }}">
       <span>{{ .Params.customerStories.textLink }}</span>
