--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
@@ -103,7 +103,7 @@
     background-position: center bottom;
 
     &__content {
-      padding: 0 rem(331) 0 0;
+      padding: 0 0 rem(331) 0;
       max-width: rem(920);
     }
 
