add menu mobile

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -17,6 +17,7 @@
 @import 'partials/get-started';
 @import 'partials/footer';
 @import 'partials/additional-resources';
+@import 'partials/menu-mobile';
 
 .main-header {
   background: $neutral-10;
