--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   gap: $spacer * 1.5;
+  padding-top: rem(60);
+  box-sizing: content-box;
   border-bottom: 1px solid var(--Neutral-N20, #161e33);
   background: var(--Neutral-N10, #090e1a);
 
@@ -20,5 +22,10 @@
 
   &__link {
     font-size: $font-size-s !important;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    padding-top: 0;
+    box-sizing: border-box;
   }
 }
