--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -6,8 +6,9 @@
     <main>
       <header class="main-header">
         {{ with (.Site.GetPage "section" "top-banner") }} {{ partial "top-banner" . }} {{ end }} {{ with (.Site.GetPage
-        "menu") }} {{ partial "menu" . }} {{ end }} {{ with (.Site.GetPage "hero") }} {{ partial "hero" . }} {{ end }}
-        {{ with (.Site.GetPage "customers") }} {{ partial "customers" . }} {{ end }}
+        "menu") }} {{ partial "menu" . }} {{ end }} {{ with (.Site.GetPage "menu-mobile") }} {{ partial "menu-mobile" .
+        }} {{ end }} {{ with (.Site.GetPage "hero") }} {{ partial "hero" . }} {{ end }} {{ with (.Site.GetPage
+        "customers") }} {{ partial "customers" . }} {{ end }}
       </header>
     </main>
     {{ with (.Site.GetPage "core-features") }} {{ partial "core-features" . }} {{ end }} {{ with (.Site.GetPage
